--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,25 @@
-#Gradle
-org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+kotlin.version=1.9.22
+agp.version=8.2.2
+compose.version=1.6.1
 
-#Kotlin
-kotlin.code.style=official
-
-#MPP
-kotlin.mpp.stability.nowarn=true
-kotlin.mpp.enableCInteropCommonization=true
-kotlin.mpp.androidSourceSetLayoutVersion=2
-
-#Android
-android.useAndroidX=true
 android.compileSdk=34
 android.targetSdk=34
 android.minSdk=24
 
-#Versions
-kotlin.version=1.9.21
-agp.version=8.0.2
-compose.version=1.5.11
+#Kotlin/Native memory manager
+kotlin.native.cacheKind=static
+kotlin.native.binary.memoryModel=experimental
+
+#Gradle
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options="-Xmx2048m"
+
+#Compose
+org.jetbrains.compose.experimental.uikit.enabled=true
+org.jetbrains.compose.experimental.jscanvas.enabled=false
+org.jetbrains.compose.resources.fallback.language=en
+
+# Other
+kotlin.mpp.enableCompatibilityMetadataVariant=true
+kotlin.mpp.androidSourceSetLayoutVersion=2
+android.useAndroidX=true
+kotlin.native.ignoreDisabledTargets=true
