--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -20,6 +20,11 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+
+    - name: Clean Gradle cache
+      run: |
+        rm -rf ~/.gradle/caches
+        rm -rf .gradle
     
     - name: Cache Gradle dependencies
       uses: actions/cache@v3
@@ -53,11 +58,16 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-    
+
     - name: Setup Xcode
       uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: 'latest-stable'
+
+    - name: Clean Gradle cache
+      run: |
+        rm -rf ~/.gradle/caches
+        rm -rf .gradle
     
     - name: Install CocoaPods
       run: |
